--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,8 @@
-.active{
-  text-decoration:underline;
+.active {
+  text-decoration: underline;
   text-decoration-thickness: 5px;
+}
 
+.pointer {
+  cursor: pointer;
 }
