--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,6 @@
 .active {
-  text-decoration: underline;
-  text-decoration-thickness: 5px;
+  text-decoration: underline !important;
+  text-decoration-thickness: 5px !important;
 }
 
 .pointer {
@@ -74,4 +74,19 @@
   100% {
     background-position: 0% 50%;
   }
+}
+
+.card-perso {
+  width:  20vw;
+  height: 80vh;
+  overflow: hidden;
+
+  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px,
+    rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px,
+    rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
+
+}
+
+.card-perso-body {
+  overflow:hidden;
 }
