--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900");
+
 .active {
   text-decoration: underline !important;
   text-decoration-thickness: 5px !important;
@@ -77,16 +79,77 @@
 }
 
 .card-perso {
-  width:  20vw;
+  width: 20vw;
   height: 80vh;
   overflow: hidden;
 
   box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px,
     rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px,
     rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
-
 }
 
 .card-perso-body {
-  overflow:hidden;
+  overflow: hidden;
+}
+
+.content {
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+
+.content h2 {
+  color: #fff;
+  font-size: 3rem;
+  position: absolute;
+}
+@media (max-width: 767px) {
+  .content h2 {
+    font-size: 2.5rem;
+    line-height: 1;
+    margin-top: 0;
+  }
+
+
+
+}
+.content h2:nth-child(1) {
+  color: transparent;
+  -webkit-text-stroke: 2px #010a0e;
+}
+
+.content h2:nth-child(2) {
+  color: #070707;
+  animation: animate 4s ease-in-out infinite;
+}
+
+@keyframes animate {
+  0%,
+  100% {
+    clip-path: polygon(
+      0% 45%,
+      16% 44%,
+      33% 50%,
+      54% 60%,
+      70% 61%,
+      84% 59%,
+      100% 52%,
+      100% 100%,
+      0% 100%
+    );
+  }
+
+  50% {
+    clip-path: polygon(
+      0% 60%,
+      15% 65%,
+      34% 66%,
+      51% 62%,
+      67% 50%,
+      84% 45%,
+      100% 46%,
+      100% 100%,
+      0% 100%
+    );
+  }
 }
